# TelegramChannelBlockerBot

./: .gitignore  README.md  config.ini  config.ini.example  main.py  pyproject.toml
plugins/: commands.py  glovar.py
plugins/filters/: mod_filters.py
plugins/functions/: database.py  telegram.py  utils.py
plugins/handlers/: cmd_help.py  cmd_start.py  cmd_stat.py  cmd_whitelist.py  message_handler.py
plugins/sqls/: create_link_channel_table.sql  create_stat_table.sql  create_whitelist_table.sql
