[tool.poetry]
name = "tgchannelblockerbot"
version = "0.1.2"
description = ""
authors = ["sam01101 <sam@vtr.ac>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
Pyrogram = "^1.2.12"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

